📌🏕 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
       }
       body {
         background-image: url("Logos/background2.jpeg");
-        padding-top: 90px;
+        padding-top: 150px;
+        background-position: center;
         background-repeat: no-repeat;
-        
+        height: 240px;
+        background-size: cover;
       }
     </style>
     <img
-      src="Logos/profile.png"
+      src="Logos/profile.jpeg"
       alt="profile"
       class="center"
       usemap="#workmap"
@@ -49,14 +51,14 @@
             <img
               src="Logos/1611228490959.png"
               alt="Instagram"
-              style="width:52px;height:52px;"
+              style="width:52px;height:52px;padding-left:20px;padding-right:20px"
             />
           </a>
           <a href="mailto:janardanmaurya238@gmail.com">
             <img
               src="Logos/gmail.png"
               alt="Mail"
-              style="width:52px;height:52px;"
+              style="width:52px;height:52px;padding-left:20px;padding-right:20px"
             />
           </a>
           <a
@@ -65,7 +67,7 @@
             <img
               src="Logos/1611229270442.png"
               alt="Spotify"
-              style="width:52px;height:52px; filter: saturate(650%)"
+              style="width:52px;height:52px;padding-left:20px;padding-right:20px;filter: saturate(650%)"
             />
           </a>
         </div>
